<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AttendanceApp</string>
    <string name="daily_login">Daily Attendance</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="log_in_txt">Log In</string>
    <string name="register_txt">Register</string>
    <string name="attendance_txt">Attendance Screen</string>
    <string name="registration_txt">Registration Screen</string>
    <string name="user_name_hint">Enter user name</string>
    <string name="phone_no_hint">Enter phone no</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_report">View Report</string>

</resources>